--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <META NAME="Description" CONTENT="">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <style>
 
