--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/particle.js"></script>
-    <script src="js/universe.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/particle.js"></script>
+    <script src="./js/universe.js"></script>
   </body>
 </html>
